[package]
name = "tgwol"
version = "0.1.1"
repository = "https://github.com/quagsirus/tgwol"
license = "Unlicense"
edition = "2021"


[dependencies]
ron = "0.8"
config = "0.14.0"
wakey = "0.3.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
